# Normative-modelling-of-adolescent-psychopathology

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/LCA/: __init__.py  lca_cbcl.py
src/discover/: __init__.py  compute_deviations.py  stat_tests.py  utils.py
src/modelling/: __init__.py
src/modelling/load/: load.py
src/modelling/models/: __init__.py
src/modelling/train/: train.py
src/modelling/train/cVAE/: cVAE_train.py
src/modelling/tune/VAE/: VAE_rsfmri.sh  VAE_thickness.sh  VAE_tune.py  VAE_tune_local.py  VAE_volumn.sh  which_hyper.py
src/preprocess/: __init__.py  deconfound.py  prepare_data.py  split.py
src/preprocess/scripts/: deconfound.py  prepare_data.py  split.py
