[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normative-modelling-of-adolescent-psychopathology"
version = "0.1.0"
description = "Normative modelling of adolescent psychopathology using VAE and ABCD data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Qingkun Deng"}
]
license = {text = "MIT"}

dependencies = ["ruff",
"pre-commit",
"pandas",
"matplotlib",
"scikit-learn",
"ipykernel",
"seaborn",
"pysurfer",
"nilearn",
"plotly",
"nichord",
"neuroCombat",
"ptitprince",
"stepmix",
"scikit-learn~=1.5.0",
]

[tool.ruff]
select = ["E", "F", "D", "I"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "E501", "E712", "E741", "D205", "D209", "D210"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.sqlfluff.core]
dialect = "tsql"
templater = "placeholder"
exclude_rules = "L016,L031"
max_line_length = 88
